--- a/style/style-shop.css
+++ b/style/style-shop.css
@@ -183,7 +183,7 @@ body {
 .option-bar {
   font-family: var(--strict-font);
   width: 100%;
-  height: 55px;
+  height: 65px;
   background-color: white;
 }
 .option-bar__list {
@@ -201,7 +201,7 @@ body {
   border-bottom:2px solid black;
   position: relative;
   font-size: 16px;
-  width: 80px;
+  width: 25%;
   padding: 20px 0 10px 0;
   max-width: 100px;
 }
@@ -223,23 +223,23 @@ body {
 .item-container {
    text-align: center;
 }
-.header-scroll {
+.header--scroll {
   height: 70px;
   color: black;
   background-color: white;
   stroke: black; fill: black;
 }
-.header-scroll ~ path {
+.header--scroll ~ path {
   -webkit-transition: 0.4s;
   -o-transition: 0.4s;
   transition: 0.4s;
   stroke: red;
   fill : white;
 }
-.header-scroll .header__nav{
+.header--scroll .header__nav{
  visibility: hidden;
 }
-.header-scroll .header__nav .header__logo {
+.header--scroll .header__nav .header__logo {
   font-size: 20px;
   -webkit-transition: 0.4s;
   -o-transition: 0.4s;
@@ -247,7 +247,7 @@ body {
   visibility: visible;
   color: black;
  }
- .header-scroll .icon{
+ .header--scroll .icon{
   margin-top: 18px;
   width: 22px;
   height: 22px;
@@ -530,7 +530,7 @@ label:hover, label:focus {
       -ms-flex-pack: center;
           justify-content: center;
 }
-.option-bar__sale-inner {
+.option-bar__form--sale {
     width: 90%;
     -webkit-box-pack: start;
     -ms-flex-pack: start;
