--- a/news.css
+++ b/news.css
@@ -564,8 +564,11 @@ body {
   background-color: transparent; }
 
 .container {
+  position: absolute;
+  box-sizing: border-box;
   justify-content: center;
   width: 100%;
+  height: 100vh;
   display: flex;
   background-color: #ffffff;
   padding: 50px;
@@ -655,6 +658,8 @@ body {
       font-size: 2em; } }
 
 .image-box {
+  max-width: 100%;
+  height: auto;
   margin-left: 0; }
   @media (max-width: 768px) {
     .image-box {
@@ -662,16 +667,9 @@ body {
       margin-bottom: 60px; } }
 
 .right-section__item-img {
-  width: 300px;
+  transform: scale(1.4);
+  max-width: 100%;
   height: auto; }
-  @media (min-width: 768px) {
-    .right-section__item-img {
-      width: 400px;
-      height: auto;
-      min-width: 300px; } }
-  @media (min-width: 1120px) {
-    .right-section__item-img {
-      min-width: 600px; } }
 
 .right-section {
   display: flex;
