--- a/news.css
+++ b/news.css
@@ -552,23 +552,22 @@ a {
   color: black; }
 
 body {
-  height: 100%;
+  max-height: 100vh;
   font-family: "Granjon";
   color: black; }
 
-.header--active .header__link {
-  color: black; }
-
-.header.header--active {
-  border-bottom: none;
-  background-color: transparent; }
+.header--active {
+  border-bottom: none; }
+  .header--active .header__link {
+    color: black; }
 
 .container {
+  overflow: hidden;
   position: absolute;
   box-sizing: border-box;
   justify-content: center;
   width: 100%;
-  height: 100vh;
+  height: 100%;
   display: flex;
   background-color: #ffffff;
   padding: 50px;
@@ -668,7 +667,7 @@ body {
 
 .right-section__item-img {
   transform: scale(1.4);
-  max-width: 100%;
+  max-width: 80%;
   height: auto; }
 
 .right-section {
