--- a/style/variables.scss
+++ b/style/variables.scss
@@ -3,6 +3,7 @@ $strict-font: 'Graphik';
 $italic-font: 'Mysl';
 $deep-red: rgb(225, 0, 0);
 $phone: 320px;
+$mobileM: 375px;
 $tablet: 768px;
 $desktop: 1120px;
 $desktop-fix: 1440px;
