--- a/style/style-contacts.scss
+++ b/style/style-contacts.scss
@@ -89,41 +89,86 @@ body {
     background-color: rgb(22,14,8);
     height: 150px;
     color: #fff;
+    &:hover, &:focus {
+        @media (min-width: $mobileM) {
+            .parallax__description {
+                letter-spacing: 2px;
+            }
+        }
+        @media (min-width: $tablet) {
+            .parallax__description {
+                letter-spacing: 3px;
+            }
+        }
+        @media (min-width: $desktop) {
+            .parallax__description {
+                transform: scale(1.15);
+            }
+        }
+        @media (min-width: $desktop-min) {
+            .parallax__description {
+                transform: scale(1.3);
+                letter-spacing: 3.5px;
+            }
+        }
+        .parallax__heading--highlight {
+            .shop-link {
+                color: rgb(200, 255, 35);
+            }
+            ~.parallax__description {
+                color: rgb(200, 255, 35);
+            }
+        }
   }
+//   .parallax__heading--highlight {
+//     &:hover, &:focus {
+//         .shop-link {
+//             color: rgb(200, 255, 35);
+//             border-bottom: 1px solid rgb(200, 255, 35);
+//         }
+//         ~.parallax__description {
+//             color: rgb(200, 255, 35);
+//         }
+//     }
+// }
+}
 
   .parallax__slide--1 {
     background-position: top;
-    background-image: url("./img/contacts-min-shop.jpg");
-    @media (min-width: $tablet) {
+    // background-image: url("./img/contacts-min-shop.jpg");
+    // @media (min-width: $tablet) {
         background-image: url("./img/contacts-shop.jpg");
-    }
+    // }
   }
 
   .parallax__slide--2 {
     background-position: top;
-    background-image: url("./img/contacts-min-gold.jpg");
-    @media (min-width: $tablet) {
+    // background-image: url("./img/contacts-min-gold.jpg");
+    // @media (min-width: $tablet) {
         background-image: url("./img/contacts-goldapple.jpg")
-    }
+    // }
   }
   .parallax__slide--3 {
     background-position: top;
-    background-image: url("./img/contacts-min-sephora.jpg");
+    // background-image: url("./img/contacts-min-sephora.jpg");
 
-    @media (min-width: $tablet) {
+    // @media (min-width: $tablet) {
         background-image: url("./img/contacts-sephora.jpeg")
-    }
+    // }
   }
 .parallax__logo {
     border-radius: 10px;
     width: 120px;
     height: 120px;
 }
-
+.parallax__description {
+    transition: .4s;
+}
 .parallax__heading {
     padding: 5px 0;
-    border-bottom: 1px solid transparent;
+    border-bottom: 1px solid rgb(22,14,8);
     transition: .4s;
+
     .shop-link {
         &:active,&:link,&:visited
         {
@@ -133,8 +178,14 @@ body {
     &:hover, &:focus {
         .shop-link {
             color: white;
+            transition: 0;
             border-bottom: 1px solid white;
         }
+        // ~.parallax__description {
+        //     transform: scale(1.3);
+        //     letter-spacing: 4px;
+        // }
+
     }
 }
 .parallax__heading--highlight {
@@ -146,7 +197,6 @@ body {
     }
     &:hover, &:focus {
         .shop-link {
-            color: rgb(200, 255, 35);
             border-bottom: 1px solid rgb(200, 255, 35);
         }
     }
