--- a/style/style-discounts.scss
+++ b/style/style-discounts.scss
@@ -1,7 +1,3 @@
-html, body {
-    position: relative;
-    height: 100%;
-}
 
 a {
     text-decoration: none;
@@ -15,7 +11,7 @@ body {
     color:black;
     margin: 0;
     padding: 0;
-    overflow-x: hidden;
+    overflow: hidden;
 }
 .aside {
     position: fixed;
@@ -48,6 +44,7 @@ body {
     z-index: 2;
 }
 .header {
+
     border: none;
     position: absolute;
     color: black;
@@ -62,8 +59,12 @@ body {
     justify-content: center;
     align-items: center;
 }
+.swiper-slide {
+    padding: 0 20px;
+}
 .discount-item__img {
-    max-width: 40%;
+    max-width: 50%;
+    max-height: 100%;
     height: auto;
 
 }
