--- a/style/style-news.scss
+++ b/style/style-news.scss
@@ -4,28 +4,26 @@ a {
 }
 
 body {
-    height: 100%;
+   max-height: 100vh;
     font-family: $main-font;
     color: black;
 }
 
 .header--active{
-
+    border-bottom: none;
     .header__link {
         color: black;
     }
 }
-.header.header--active {
-   border-bottom: none;
-   background-color: transparent;
-}
+
 
 .container {
+    overflow: hidden;
     position: absolute;
     box-sizing: border-box;
 	justify-content: center;
 	width: 100%;
-    height: 100vh;
+    height: 100%;
 	display: flex;
 	background-color: #ffffff;
 	padding: 50px;
@@ -137,7 +135,7 @@ body {
 
 .right-section__item-img {
    transform: scale(1.4);
-   max-width: 100%;
+   max-width: 80%;
    height: auto;
 
 //    @media (min-width: $tablet) {
